# gramarye-query-engine

./: .gitignore  CMakeLists.txt  README.md  build-test-shell.sh  test-query.sh  test_shell.c
examples/: query_examples.md
include/gramarye_query/: executor.h  parser.h  query.h  shell.h
src/: executor.c  parser.c  query.c  shell.c
tests/: test_common.h  test_executor.c  test_integration.c  test_negative.c  test_parser.c  test_runner.c  test_stress.c
